[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/HUD/dice3.png" type="Texture" id=1]
[ext_resource path="res://assets/HUD/dice4.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/dice5.png" type="Texture" id=3]
[ext_resource path="res://assets/HUD/dice6.png" type="Texture" id=4]
[ext_resource path="res://assets/HUD/dice1.png" type="Texture" id=5]
[ext_resource path="res://assets/HUD/dice2.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/statholder.png" type="Texture" id=7]
[ext_resource path="res://StatDice.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "4",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 67, 65 )

[node name="StatDice" type="Area2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 8 )

[node name="ColorTimer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -73.0
margin_top = -73.0
margin_right = 72.0
margin_bottom = 69.0
mouse_filter = 2
color = Color( 0.690196, 0.619608, 0.0313726, 1 )

[node name="Outline" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="Value" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ExtraRollTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ColorTimer" to="." method="_on_ColorTimer_timeout"]
[connection signal="timeout" from="ExtraRollTimer" to="." method="extra_roll"]
